# dss-code-prime

./: .gitattributes  .gitignore  CMakeLists.txt  CUsersrafaeAppDataLocalTempplan_d642655.md  LICENSE  NOTICE  README.md
integrated_tests/: CMakeLists.txt  runner.cpp
src/: CMakeLists.txt  main.cpp
src/asm/: CMakeLists.txt  asm.cpp  asm.hpp  disasm.cpp  disasm.hpp
src/core/: CMakeLists.txt  compiler.cpp  compiler.hpp  cpp_invariants.hpp  export.hpp
src/ffi/: CMakeLists.txt  binary_reader.cpp  binary_reader.hpp  c_header_parser.cpp  c_header_parser.hpp  import_surface.hpp  ingest.cpp  ingest.hpp  shipped_lib_descriptor.cpp  shipped_lib_descriptor.hpp  shipped_type_consistency.cpp  shipped_type_consistency.hpp
src/hir/: CMakeLists.txt  const_eval.cpp  const_eval.hpp  const_eval_arith.hpp  const_eval_operators.hpp  cst_const_eval.cpp  cst_const_eval.hpp  hir.cpp  hir.hpp  hir_attrs.hpp  hir_cursor.cpp  hir_cursor.hpp  hir_intrinsic_registry.cpp  hir_intrinsic_registry.hpp  hir_kind_registry.cpp  hir_kind_registry.hpp  hir_literal_pool.cpp  hir_literal_pool.hpp  hir_node.hpp  hir_op.hpp  hir_op_registry.cpp  hir_op_registry.hpp  hir_text.cpp  hir_text.hpp  hir_verifier.cpp  hir_verifier.hpp
src/link/: CMakeLists.txt  cross_cu_resolve.cpp  cross_cu_resolve.hpp  entry_trampoline.cpp  entry_trampoline.hpp  linker.cpp  linker.hpp  object_format_schema.cpp  object_format_schema.hpp  object_format_schema_json.cpp  symbol_kind.hpp  writer.cpp  writer.hpp
src/lir/: CMakeLists.txt  lir.cpp  lir.hpp  lir_2addr_legalize.cpp  lir_2addr_legalize.hpp  lir_callconv.cpp  lir_callconv.hpp  lir_literal_pool.cpp  lir_literal_pool.hpp  lir_liveness.cpp  lir_liveness.hpp  lir_node.hpp  lir_opcode.hpp  lir_pass_util.cpp  lir_pass_util.hpp  lir_reg.hpp  lir_regalloc.cpp  lir_regalloc.hpp  lir_rewrite.cpp  lir_rewrite.hpp  lir_text.cpp  lir_text.hpp  lir_verifier.cpp  lir_verifier.hpp  lir_wide_call_args.cpp  lir_wide_call_args.hpp
src/lsp/: CMakeLists.txt  diagnostic_translator.cpp  diagnostic_translator.hpp  document_store.cpp  document_store.hpp  json_rpc.cpp  json_rpc.hpp  lsp_semantic_query.cpp  lsp_semantic_query.hpp  lsp_server.cpp  lsp_server.hpp  method_dispatcher.cpp  method_dispatcher.hpp  protocol.cpp  protocol.hpp  schema_cache.cpp  schema_cache.hpp  thread_pool.cpp  thread_pool.hpp  transport.cpp  transport.hpp  utf16_column.cpp  utf16_column.hpp
src/mir/: CMakeLists.txt  mir.cpp  mir.hpp  mir_cfg.hpp  mir_dom.cpp  mir_dom.hpp  mir_literal_pool.cpp  mir_literal_pool.hpp  mir_node.hpp  mir_opcode.hpp  mir_struct_markers.cpp  mir_struct_markers.hpp  mir_text.cpp  mir_text.hpp  mir_verifier.cpp  mir_verifier.hpp
src/opt/: CMakeLists.txt  optimizer.cpp  optimizer.hpp  optimizer_json.cpp
src/program/: CMakeLists.txt  cli_args.cpp  cli_args.hpp  compile_pipeline.cpp  compile_pipeline.hpp  cross_validate_target_format.cpp  cross_validate_target_format.hpp  input_resolver.cpp  input_resolver.hpp  program.cpp  program.hpp  project_config.cpp  project_config.hpp  target_spec.cpp  target_spec.hpp
src/tokenizer/: CMakeLists.txt  source_reader.cpp  source_reader.hpp  token_stream.cpp  token_stream.hpp  tokenizer.cpp  tokenizer.hpp
tests/: CMakeLists.txt
tests/analysis/: CMakeLists.txt  test_diagnostic_corpus.cpp
tests/asm/: CMakeLists.txt  asm_test_support.hpp  test_asm_arm64.cpp  test_asm_arm64_binops.cpp  test_asm_arm64_tls.cpp  test_asm_cast_integration.cpp  test_asm_pipeline.cpp  test_asm_roundtrip.cpp  test_asm_substrate.cpp  test_asm_width_axis.cpp  test_asm_x86_binaryops.cpp  test_asm_x86_relocs.cpp  test_asm_x86_sse.cpp  test_asm_x86_tls.cpp  test_asm_x86_variable.cpp  test_lir_2addr_legalize.cpp  test_lk10_entry_slice_a.cpp
tests/core/: CMakeLists.txt  e2e_harness.hpp  raw_tree_builder.hpp  test_aggregate_abi.cpp  test_bit_int_value.cpp  test_bitfield_abi_conformance.cpp  test_c_subset.cpp  test_char_decode.cpp  test_checkpoint.cpp  test_config_path_walk.cpp  test_contextual_keywords.cpp  test_decl_prefix_strip.cpp  test_diagnostic_reporter.cpp  test_grammar_schema.cpp  test_lexer_modes.cpp  test_number_decode.cpp  test_operator_table.cpp  test_packed_abi_conformance.cpp  test_parse_diagnostic.cpp  test_pretty_print.hpp  test_rule_id.cpp  test_schema_cursor.cpp  test_schema_walker.cpp  test_scope_require.cpp  test_sha256.cpp  test_source_buffer.cpp  test_source_span.cpp  test_string_style.cpp  test_strong_ids.cpp  test_target_schema.cpp  test_token.cpp  test_tree.cpp  test_tree_attrs.cpp  test_tree_builder.cpp  test_tree_cursor.cpp  test_tree_end_to_end.cpp  test_tree_node.cpp  test_tree_views.cpp  test_tree_visitor.cpp  test_tsql_subset.cpp  (+5 more)
tests/examples/: CMakeLists.txt  examples_runner.cpp
tests/ffi/: CMakeLists.txt  test_abi_catalog.cpp  test_binary_reader.cpp  test_binary_reader_ar.cpp  test_binary_reader_macho.cpp  test_binary_reader_macho_roundtrip.cpp  test_binary_reader_pe.cpp  test_c_header_parser.cpp  test_c_mangle.cpp  test_ingest.cpp  test_shipped_lib_descriptor.cpp  test_shipped_type_consistency.cpp
tests/hir/: CMakeLists.txt  test_const_eval.cpp  test_hir.cpp  test_hir_attrs.cpp  test_hir_cursor.cpp  test_hir_decl.cpp  test_hir_expr.cpp  test_hir_genericity.cpp  test_hir_intrinsic_registry.cpp  test_hir_kind_registry.cpp  test_hir_lowering_c_subset.cpp  test_hir_lowering_generic.cpp  test_hir_lowering_multi_lang.cpp  test_hir_lowering_toy.cpp  test_hir_lowering_tsql.cpp  test_hir_node.cpp  test_hir_op.cpp  test_hir_stmt.cpp  test_hir_text.cpp  test_hir_verifier.cpp  test_source_span.cpp
tests/link/: CMakeLists.txt  gcc_lib_c164_object.inc  gcc_section_relative_c167.inc  link_test_support.hpp  macho_test_support.hpp  test_aarch64_reloc_formulas.cpp  test_ar_writer.cpp  test_codesign_placeholder.cpp  test_coff_object_reader.cpp  test_cross_cu_resolve.cpp  test_crosscu_link_formats.cpp  test_elf_dyn_writer.cpp  test_elf_exec_writer.cpp  test_elf_writer.cpp  test_link_writer.cpp  test_linker.cpp  test_lk10_entry_slice_c.cpp  test_macho_arm64_exit.cpp  test_macho_chained_fixups.cpp  test_macho_codesign.cpp  test_macho_dylib_writer.cpp  (+9 more)
(+1755 files in other folders)
